fix class names and tags in index.html

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ button, a:hover{
     color: rgba(255, 255, 255, 0.884);
 }
 
-.wrapper{
+.mainWrapper{
     position: relative;
     top: 55px;
     grid-column: 1/-1;
@@ -96,7 +96,7 @@ button, a:hover{
     overflow: hidden;
 }
 
-.images{
+.slides{
     position: relative;
     display: flex;
 }
@@ -155,17 +155,17 @@ button, a:hover{
     padding-bottom: 12px;
 }
 
-.images > .a{
+.slides > .a{
     align-items: flex-start;
     text-align: left;
 }
 
-.images > .b{
+.slides > .b{
     align-items: center;
     text-align: center;
 }
 
-.images > .c{
+.slides > .c{
     align-items: flex-end;
     text-align: right;
 }
